syntax="proto3";
option java_package="com.example.tp6.stub";

service CustomerService{
  rpc getAllCustomers(GetAllCustomersRequest) returns (GetAllCustomersResponse);
  rpc getCustomerById(GetCustomerByIdRequest) returns (GetCustomerByIdResponse);
  rpc saveCustomer(SaveCustomerRequest) returns (SaveCustomerResponse);
}

message SaveCustomerRequest{
  CustomerRequest customer=1;
}

message SaveCustomerResponse{
  Customer customer=1;
}

message GetCustomerByIdRequest{
  int32 id=1;
}

message GetCustomerByIdResponse{
  Customer customer=1;
}

message GetAllCustomersRequest{}

message GetAllCustomersResponse{
  repeated Customer customers=1;
}

message Customer{
  int32 id=1;
  string name=2;
  string email=3;
}

message CustomerRequest{
  string name=1;
  string email=2;
}